# PiFridge

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  fridge_data.json  pifridge_setup.sh  pubspec.yaml  run.sh
.github/workflows/: rpi_sensors_tests.yml
3D_Model/: Case.f3d  LID.f3d  Lid and Case.f3z
REMOVE/rpi_sensors/: CMakeLists.txt
REMOVE/rpi_sensors/include/: IGpioOutput.hpp
REMOVE/rpi_sensors/src/: Bh1750Sensor.cpp  GpioOutput.cpp
REMOVE/rpi_sensors/tests/: DoorLightControllerTest.cpp
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pifridge_mobile_app/: MainActivity.kt
api/: api.py
api/deployment/: nginx_config.conf
config/: README.md  pifridge.conf
docs/: BH1750_realtime_design_hamna.md  README.md
include/: II2CDevice.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  sensor_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
object_detect/: object_detect_tf.json
old_mains/: main.cpp
research/BME680_demo/: bm680.hpp  demo_main.cpp
research/Barcode_Scanner/: BarcodeScanner  BarcodeScanner.cpp  barcode_reader
research/barcodeApi/: fetch_product_test.cpp  test
research/barcodeApi/web_app/nignx_server/: pi_fridge.conf
rpi_sensors/: CMakeLists.txt  README.md
rpi_sensors/include/: Bh1750Sensor.hpp  DoorLightController.hpp  GpioOutput.hpp  ILightSensor.hpp
rpi_sensors/src/: GpioOutput.cpp  main.cpp
src/: BarcodeScanner.cpp  CMakeLists.txt  README.md  main.cpp
src/BH1750/: BH1750_realtime_design_hamna.md  Bh1750Sensor.cpp  CMakeLists.txt  DoorLightController.cpp  ILightSensor.cpp  README.md  main.cpp
src/BH1750/include/: Bh1750Sensor.hpp  DoorLightController.hpp  ILightSensor.hpp
src/BH1750/test/: BH1750Demo.cpp  DoorLightControllerTest.cpp
src/BME680/: BME680.cpp  BME680.hpp  BME680Sensor.cpp  BME680Sensor.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bm680.hpp  bme680_demo  cmake_install.cmake  demo_main.cpp
src/BME680/BH1750/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/BME680/BME680/: Makefile  cmake_install.cmake
src/BME680/common/: Makefile  cmake_install.cmake
src/BME680/test/: BME680Demo.cpp
src/BME680/web_app/: Makefile  cmake_install.cmake
src/BarcodeScanner/: BarcodeScanner.cpp  BarcodeScanner.hpp  CMakeLists.txt  README.md
src/BarcodeScanner/test/: BarcodeScannerDemo.cpp
src/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  README.md
src/Camera/test/: CameraDemo.cpp
src/barcodeScanner/: BarcodeScanner.cpp  BarcodeScanner.hpp  CMakeLists.txt  barcodeScanner  fetch_product_test.cpp
src/barcodeScanner/test/: scanner
src/common/: CMakeLists.txt  LinuxI2CDevice.cpp  LinuxI2CDevice.hpp  README.md
src/openfoodfactsAPI/: fetch_product_test.cpp
src/web_app/: CMakeLists.txt  README.md  index.html  pifridge_api.cpp  pifridge_inventory.cpp
test/: widget_test.dart
web/: index.html  manifest.json
web_app/Pi_Fridge/: home.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
